@@ -491,19 +491,28 @@ test error-15.7 {try with no matching handler (unknown integer result propagates
     try { return -level 0 -code 123456 } trap {} {} { list a b c }
 } -returnCodes 123456 -result {}
 
-foreach level {0 1 2} {
+foreach level {0 1 2 3} {
     foreach code {0 1 2 3 4 5} {
 
 	# Following cases have different -errorinfo; avoid false alarms
 	if {$level == 0 && $code == 1} continue
 
 	foreach extras {{} {-bar soom}} {
+
 test error-15.8.$level.$code.[llength $extras] {[try] coverage} {
     set script {return -level $level -code $code {*}$extras foo}
     catch $script m1 o1
     catch {try $script} m2 o2
     expr {$o1 eq $o2 ? "ok" : "$o1\n\tis not equal to\n$o2"}
 } ok
+
+test error-15.9.$level.$code.[llength $extras] {[try] coverage} {
+    set script {return -level $level -code $code {*}$extras foo}
+    catch $script m1 o1
+    catch {try $script finally {}} m2 o2
+    expr {$o1 eq $o2 ? "ok" : "$o1\n\tis not equal to\n$o2"}
+} ok
+
 	}
     }
 }
