@@ -1,3 +1,8 @@
+2009-09-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/error.test (error-15.9.*):	More coverage tests for [try].
+	Test error-15.9.3.0.0 covers [Bug 2855247].
+
 2009-09-27  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/error.test (error-15.8.*):	Coverage tests illustrating
